--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,16 @@
 body
 {
-	color: deepink;
-	text-align: center;
+	color: #333;
+	text-align: left;
 	font-family: "Arial";
+}
+#container{
+	width: 80%;
+	padding: 1em;
+	text-align: center;
+	border: 1px solid #DDD;
+	margin: 0 auto;
+}
+#contaner h1{
+	font-size: 20px;
 }
