--- a/css/estilos.css
+++ b/css/estilos.css
@@ -14,3 +14,18 @@ body
 #contaner h1{
 	font-size: 20px;
 }
+#cabecera {
+	background:#33A;
+	color: white;
+	margin: 1 auto;
+	padding: 0.5em;
+	font-weight: bold;
+	box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.75);
+}
+#cabecera #tagline{
+	margin:0 0 0 1em;
+	padding: 0.5em;
+	font-weight: normal;
+	font-size: 0.95em;
+
+}	
