--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,12 @@
 body
 {
+	background:#1e1f24 ;
 	color: #333;
 	text-align: left;
-	font-family: "Arial";
+	font-family: Arial;
+	font-size: 16px;
+	margin: 0;
+	padding: 0;
 }
 #container{
 	width: 80%;
@@ -27,5 +31,12 @@ body
 	padding: 0.5em;
 	font-weight: normal;
 	font-size: 0.95em;
-
+}
+#cabecera #logo{
+	width: 20px;
+	vertical-align: middle;
 }	
+#post{
+	background: white;
+	padding: 1em;
+}
