--- a/css/estilos.css
+++ b/css/estilos.css
@@ -27,5 +27,11 @@ body
 	padding: 0.5em;
 	font-weight: normal;
 	font-size: 0.95em;
-
 }	
+#fotter{
+	background: #777;
+	color: white;
+	text-align: center;
+	padding: 0.5em;
+
+}
